fix: Complete sqitch configuration with user info
- Add user name and email to sqitch.conf
- Fix sqitch status command functionality
- Verify sqitch project recognition and deployment status

Now sqitch status works correctly and shows:
- Project: online-learning-platform
- Latest: courses_table deployed
- Status: up-to-date

--- a/backend/sqitch.conf
+++ b/backend/sqitch.conf
@@ -7,3 +7,7 @@
 	target = db:pg://postgres:postgres@localhost:5432/online_learning
 	registry = sqitch
 	client = psql
+
+[user]
+	name = Adil Zouhal
+	email = adil.zouhal@adevinta.com
